# MoeResearch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  lapis.example.toml  moeresearch.example.toml
.context/history/: commits.jsonl  commits.md
.github/workflows/: ci.yml  release.yml
crates/lapis-cli/: Cargo.toml
crates/lapis-cli/src/: main.rs
crates/lapis-cli/src/commands/: check.rs  init.rs  mcp.rs  mod.rs  onboard.rs  serve.rs
crates/lapis-cli/src/onboarding/: claude.rs  config.rs  mod.rs  prompt.rs
crates/lapis-cli/wix/: main.wxs
crates/lapis-config/: Cargo.toml
crates/lapis-config/src/: lib.rs  limit.rs  loader.rs  types.rs
crates/lapis-core/: Cargo.toml
crates/lapis-core/src/: error.rs  logging.rs
crates/lapis-error/src/: lib.rs
crates/lapis-mcp/: Cargo.toml
crates/lapis-mcp/src/: envelope.rs  lib.rs  tools.rs
crates/lapis-model/src/: openai.rs  types.rs
crates/lapis-net/: Cargo.toml
crates/lapis-net/src/: client.rs  lib.rs  provider_http.rs  reqwest_client.rs  types.rs
crates/lapis-search/: Cargo.toml
crates/lapis-search/src/: lib.rs  provider.rs  types.rs
crates/lapis-tests/: Cargo.toml
crates/lapis-tests/fixtures/prompts/: task_decomposition_valid.json
crates/lapis-tests/tests/: cli_onboarding_tests.rs  config_tests.rs  deep_research_tests.rs  mcp_tests.rs  model_tests.rs  network_policy_tests.rs  orchestrator_tests.rs  policy_validator_tests.rs  schema_tests.rs  search_tests.rs  wire_trace_tests.rs
crates/lapis-tests/tests/support/: network.rs  research.rs
crates/lapis-workflow/: Cargo.toml
crates/lapis-workflow/src/: agent_loop.rs  lib.rs  limit.rs  policy.rs  report.rs  runtime_budget.rs  tool_policy.rs  workflow.rs
crates/moe-research-cli/: CLAUDE.md  Cargo.toml  build.rs
crates/moe-research-cli/src/: compose.rs  lib.rs  main.rs
crates/moe-research-cli/src/commands/: assets.rs  check.rs  init.rs  mcp.rs  mod.rs  onboard.rs  serve.rs
crates/moe-research-cli/src/onboarding/: claude.rs  config.rs  output.rs  prompt.rs
crates/moe-research-cli/wix/: main.wxs
crates/moe-research-config/: CLAUDE.md  Cargo.toml
crates/moe-research-config/src/: lib.rs  limit.rs  loader.rs  types.rs
crates/moe-research-error/: CLAUDE.md  Cargo.toml
crates/moe-research-error/src/: lib.rs
crates/moe-research-mcp/: CLAUDE.md  Cargo.toml
crates/moe-research-mcp/src/: envelope.rs  lib.rs  server.rs  tools.rs
crates/moe-research-model/: CLAUDE.md  Cargo.toml
crates/moe-research-model/src/: lib.rs  openai.rs  provider.rs  service.rs  types.rs
crates/moe-research-net/: CLAUDE.md  Cargo.toml
crates/moe-research-net/src/: client.rs  lib.rs  log_safe.rs  provider_http.rs  reqwest_client.rs  types.rs
crates/moe-research-search/: CLAUDE.md  Cargo.toml
crates/moe-research-search/src/: lib.rs  provider.rs  service.rs  types.rs
crates/moe-research-search/src/provider/: exa.rs  grok.rs  tavily.rs
crates/moe-research-search/src/provider/grok/: excerpt.rs  map.rs  mod.rs  sse.rs
crates/moe-research-tests/: CLAUDE.md  Cargo.toml
crates/moe-research-tests/fixtures/mcp/: aspect_research_direct_payload.json  deep_research_direct_payload.json
crates/moe-research-tests/fixtures/prompts/: task_decomposition_valid.json
crates/moe-research-tests/tests/: cli_assets_tests.rs  cli_compose_tests.rs  cli_onboarding_tests.rs  config_tests.rs  deep_research_tests.rs  mcp_tests.rs  model_tests.rs  network_policy_tests.rs  orchestrator_tests.rs  policy_validator_tests.rs  proxy_tests.rs  pure_helper_tests.rs  schema_tests.rs  search_tests.rs  web_fetch_tests.rs  wire_trace_tests.rs
crates/moe-research-tests/tests/support/: network.rs  research.rs
crates/moe-research-web-fetch/: CLAUDE.md  Cargo.toml
crates/moe-research-web-fetch/src/: cache.rs  document.rs  flight.rs  lib.rs  model.rs  service.rs
crates/moe-research-workflow/: CLAUDE.md  Cargo.toml
crates/moe-research-workflow/src/: agent_loop.rs  budget.rs  error_log_safe.rs  lib.rs  limit.rs  log_safe.rs  policy.rs  report.rs  research.rs  runtime_budget.rs  tool_policy.rs  validator.rs  workflow.rs
crates/moe-research-workflow/src/report/: mod.rs  validator.rs
crates/moe-research-workflow/src/research/: mod.rs  plan.rs  prompt.rs  request.rs
crates/moe-research-workflow/src/runtime/: agent.rs  budget.rs  deadline.rs  mod.rs  model_turn.rs  search_tool.rs
crates/moe-research-workflow/src/runtime/tools/: mod.rs  policy.rs  search.rs  web_fetch.rs
crates/moe-research-workflow/src/workflow/: aggregation.rs  aspect.rs  deep.rs  mod.rs
docs/: academic-deep-research.md  configuration.md  development.md  mcp-usage.md  pm-deep-research.md  research-agent-product.md  research-skills.md  technical-evaluation.md
docs/pm-deep-research/: orchestration-interface.md  pm-deep-research-spec.md  search-parameter-strategy.md
docs/pm-deep-research/capabilities/: competitive.md  innovation-direction.md  product-capability.md  product-requirements.md
docs/pm-deep-research/evaluation/: rubric.md
docs/superpowers/plans/: 2026-07-10-architecture-remediation-roadmap.md  2026-07-10-phase1-contract-integrity.md  2026-07-10-phase2-composition-seams.md  2026-07-10-phase3-workflow-boundaries.md  2026-07-10-phase4-hardening.md
docs/superpowers/specs/: 2026-07-10-architecture-audit-report.md  2026-07-10-workflow-crate-responsibility-boundaries-design.md
prompts/layer1/: final-report.md  task-decomposition.md
prompts/layer1/academic-deep-research/: agent-allocation.md  evidence-modules-overlay.md  final-report-evidence-synthesis.md  final-report-guidance.md  final-report-literature-review.md  final-report-paper-evaluation.md  task-decomposition.md  (+2 more)
prompts/layer2/: aspect-agent.md  evidence-extractor.md  search-planner.md
scripts/: package-pm-deep-research-assets.mjs  package-research-skills-assets.mjs
skills/: academic-deep-research.md  deep-research.md  pm-deep-research.md  technical-evaluation.md
src/: main.rs
src/config/: loader.rs
src/model/: service.rs
src/net/: policy.rs
src/schema/: common.rs  mod.rs  model.rs  report.rs
src/search/: service.rs
(+103 files in other folders)
