[package]
name = "lapis"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
rmcp = "1.7"
schemars = { version = "1.2", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.9"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
