[workspace]
members = [
    "crates/moe-research-error",
    "crates/moe-research-config",
    "crates/moe-research-net",
    "crates/moe-research-model",
    "crates/moe-research-search",
    "crates/moe-research-workflow",
    "crates/moe-research-mcp",
    "crates/moe-research-cli",
    "crates/moe-research-tests",
]
default-members = ["crates/moe-research-cli"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.2.7"
repository = "https://github.com/4o3F/MoeResearch"
homepage = "https://github.com/4o3F/MoeResearch"
license = "AGPL-3.0-only"
authors = ["4o3F", "Heye"]
description = "Rust-based deep research MCP core service"

[workspace.dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
eventsource-stream = "0.2"
flate2 = "1"
futures = "0.3"
inquire = { version = "0.9.4", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "socks", "stream"] }
rmcp = "1.8"
schemars = { version = "1.2", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
snafu = "0.9"
tar = "0.4"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[profile.dist]
inherits = "release"
lto = "thin"
