[package]
name = "lapis-cli"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "lapis"
path = "src/main.rs"

[dependencies]
clap.workspace = true
inquire.workspace = true
lapis-config = { path = "../lapis-config" }
lapis-error = { path = "../lapis-error" }
lapis-mcp = { path = "../lapis-mcp" }
lapis-model = { path = "../lapis-model" }
lapis-net = { path = "../lapis-net" }
lapis-search = { path = "../lapis-search" }
lapis-workflow = { path = "../lapis-workflow" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
