[package]
name = "moe-research-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
publish = false

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "DE713A13-5833-4F54-B1B9-EB67FCD217A6"
path-guid = "3C564348-A6CA-44E8-8AD1-7F49EA59A149"
license = "../../LICENSE"
eula = false

[[bin]]
name = "moeresearch"
path = "src/main.rs"

[dependencies]
clap.workspace = true
flate2.workspace = true
inquire.workspace = true
moe-research-config = { path = "../moe-research-config" }
moe-research-error = { path = "../moe-research-error" }
moe-research-mcp = { path = "../moe-research-mcp" }
moe-research-model = { path = "../moe-research-model" }
moe-research-net = { path = "../moe-research-net" }
moe-research-search = { path = "../moe-research-search" }
moe-research-workflow = { path = "../moe-research-workflow" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
