[package]
name = "moe-research-config"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "moe_research_config"
path = "src/lib.rs"

[dependencies]
moe-research-error = { path = "../moe-research-error" }
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
snafu.workspace = true
toml.workspace = true
