[package]
name = "moe-research-model"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "moe_research_model"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
moe-research-error = { path = "../moe-research-error" }
moe-research-net = { path = "../moe-research-net" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tracing.workspace = true
